--- a/README
+++ b/README
@@ -1,30 +1,17 @@
-Програмата върши едно доста просто нещо. Както подсказва функцията usage(), тя
-приема следните аргументи:
-  - време в секунди или в минути, ако завършва на 'm', например 10, 42, 15m
-  - допълнителни параметри: -v, всяко едно от които увеличава verbosity опцията
-    с едно (до максимум 2)
-  - програма, която да се изпълни след указаното време
-  - допълнителни параметри за програмата, която ще се изпълни
+This little program does a very simple thing: it takes a time and a program
+with its set of arguments and executes the program after the given time has
+passed. It can easily be replaced with a shell script, but it's mostly an
+exercise in C as a university project (although I will be using it in
+restraining myself from overworking :))
 
-Ако verbosity е 0 (стойността по подразбиране), не се изкарва никакъв изход,
-описващ какво се случва. Ако е 1, се изкарва съобщение всяка минута за това
-колко минути остават. Ако е 2, то се изкарва съобщение всяка секунда за това
-колко секунди остават.
+By adding an 'm' after the time, it's in minutes, otherwise it's in seconds.
+That should be enough.
 
-Нещо, което може и да не е добра идея, е използването на SIGQUIT за паузиране
-на броенето. За тази цел спокойно може да се използва SIGSTOP, но от една
-страна, исках да изкарвам съобщение, че програмата е в режим "пауза", а също
-така исках и да е лесно да се паузира от клавиатурата. Тъй като SIGSTOP не може
-да се прихваща, а от клавиатурата са достъпни само CTRL+c и CTRL+\, реших да
-използвам последното, тъй като смятам, че CTRL+c е далеч по-популярния начин за
-прекъсване на работещи програми.
+By adding a '-v' before the time parameter, the program outputs the number of
+minutes remaining every minute. a '-v -v' does the same with seconds. That can
+be used to pipe that to a toolbar or something to display the remaining time (I
+use it with xmobar).
 
-Програмата не е сложна и се чудех дали да направя нещо по-голямо, но говорихме
-за това на лекции и се съгласихте, така че реших да се огранича до това. А и,
-добавяйки още функционалности, вероятно ще се отдалечи от идеала ви за кратък
-код.
-
-Примери за използване можете да намерите в Makefile, към задачата "test". Това
-всъщност е малко подвеждащо, понеже задачата "test" всъщност не изпълнява
-автоматизирани тестове, а просто показва изпълнение на програмата с различни
-параметри, но да кажем, че е близко до това.
+Sending a SIGQUIT pauses the program, which seems silly, but it was one of two
+keyboard-controllable signals I'm aware of, and the other is the ubiquitous
+CTRL+C.
